--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="page">
             <header class="header">
                 <img class="header__logo" src="./images/header-logo.svg" alt="логотип">
-                <div class="header__links">
+                <div class="lang-links">
                     <a class="header__lang-link header__lang-link_selected" href="#">Ru</a>
                     <a class="header__lang-link" href="#">En</a> 
                 </div>
