--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
         <link rel="stylesheet" href="./pages/index.css">
         <title>Путешествия по России</title>
     </head>
-    <body>
-        <div class="page">
-            <header class="header">
-                <img class="header__logo" src="./images/header-logo.svg" alt="логотип">
-                <div class="lang-links">
-                    <a class="header__lang-link header__lang-link_selected" href="#">Ru</a>
-                    <a class="header__lang-link" href="#">En</a> 
-                </div>
-            </header>
+    <body class="page">
+        <header class="header">
+            <img class="header__logo" src="./images/header-logo.svg" alt="логотип">
+            <div class="lang-links">
+                <a class="header__lang-link header__lang-link_selected" href="#">Ru</a>
+                <a class="header__lang-link" href="#">En</a> 
+            </div>
+        </header>
+        <main class="main">
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -32,11 +32,11 @@
                     усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы 
                     выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
-                    <li>Часовых поясов 11</li>
-                    <li>Объектов природного наследия ЮНЕСКО 12</li>
-                    <li>Объектов культурного наследия ЮНЕСКО 16</li>
-                    <li>Природных заповедников 105</li>
-                    <li>Аэропортов 241</li>
+                    <li><span class="intro__span-accent">Часовых поясов</span> 11</li>
+                    <li><span class="intro__span-accent">Объектов природного наследия ЮНЕСКО</span> 12</li>
+                    <li><span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+                    <li><span class="intro__span-accent">Природных заповедников</span> 105</li>
+                    <li><span class="intro__span-accent">Аэропортов</span> 241</li>
                 </ul>
             </section>
             <section class="photo-grid">
@@ -57,8 +57,8 @@
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
+                        <p class="place__url-heading">url</p>
+                        <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                     </div>
                     <img class="place__image" src="./images/place-kosa.jpg" alt="безумно красивое фото куршской косы">
                     <div class="paragraphs">
@@ -74,9 +74,9 @@
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">
-                            National Geographic</a>
+                        <p class="place__url-heading">url</p>
+                        <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                            target="_blank">National Geographic</a>
                     </div>
                     <img class="place__image" src="./images/place-kolsky.jpg" alt="зимнее фото кольского">
                     <div class="paragraphs">
@@ -87,14 +87,15 @@
                             арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под 
                             снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались 
                             пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает
-                             апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+                            апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
                     </div>
                 </div>
                 <div class="place">
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">Youtube</a>
+                        <p class="place__url-heading">url</p>
+                        <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">
+                            Youtube</a>
                     </div>
                     <img class="place__image" src="./images/place-altai.jpg" alt="прекрасный алтай">
                     <div class="paragraphs">
@@ -111,8 +112,8 @@
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+                        <p class="place__url-heading">url</p>
+                        <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                     </div>
                     <img class="place__image" src="./images/place-winter-baikal.jpg" alt="байкал, который каждый должен увидеть вживую">
                     <div class="paragraphs">
@@ -128,12 +129,12 @@
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+                        <p class="place__url-heading">url</p>
+                        <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <img class="place__image" src="./images/place-karelia.jpg" alt="карелия с удивительной природой">
                     <div class="paragraphs">
-                        <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая 
+                    <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая 
                             тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает 
                             на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда
                             не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому 
@@ -144,22 +145,22 @@
                 </div>
             </section>
             <section class="cover">
-                <a class="cover__item" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-                    <h2 class="cover__title">До Байкала "на собаках"</h2>
+                <a class="cover__item" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+                    <h2 class="cover__title">До Байкала "на&nbsp;собаках"</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы
                          до Байкала на электричках.</p>
                 </a>
             </section>
-            <footer class="footer">
-                <div class="footer-links">
-                    <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-                    <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-                    <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-                    <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-                    <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-                </div>
-                <p class="footer__copyright">&copy; 2022, yella</p>
-            </footer>
-        </div>
+        </main>
+        <footer class="footer">
+            <nav class="footer-links">
+                <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+                <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+                <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+                <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+                <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+            </nav>
+            <p class="footer__copyright">&copy; 2022, yella</p>
+        </footer>
     </body>
 </html>
