--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
         </main>
         <footer class="footer">
             <nav class="footer-links">
-                <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
-                <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
-                <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
-                <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-                <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+                <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+                <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+                <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+                <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+                <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
             </nav>
             <p class="footer__copyright">&copy; 2022, yella</p>
         </footer>
