--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <img class="lead__image" src="./images/lead-polka.jpg" alt="безумно важная карта мест">
-                <p class="lead__caption">Ваша полка - верхняя</p>
+                <p class="lead__caption">ваша полка — верхняя</p>
             </section>
             <section class="intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -146,7 +146,7 @@
             </section>
             <section class="cover">
                 <a class="cover__item" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-                    <h2 class="cover__title">До Байкала "на&nbsp;собаках"</h2>
+                    <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы
                          до Байкала на электричках.</p>
                 </a>
